--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firstproject",
+  "name": "flickr-mobile",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -7,14 +7,19 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "devtools": "react-devtools"
   },
   "dependencies": {
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
+    "react-devtools": "^4.24.6",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-elements": "^3.4.2",
+    "react-native-super-grid": "^4.4.0",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
