--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "flickr-mobile",
   "version": "1.0.0",
+  "homepage": "https://edwardkrupicka.github.io/flickr-mobile/",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -23,7 +24,8 @@
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "gh-pages": "^4.0.0"
   },
   "private": true
 }
