--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devtools": "react-devtools"
   },
   "dependencies": {
+    "@expo/webpack-config": "~0.16.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
@@ -23,7 +24,8 @@
     "react-native-elements": "^3.4.2",
     "react-native-super-grid": "^4.4.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "webpack-dev-server": "~3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
